Login, chatbot, darkmode, get user info and styles

--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
     "npm": "^10.8.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-simple-chatbot": "^0.6.1",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^4.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.0",
